--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: List files after Maven build
+      run: ls -al target/
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag lotto-app:$(date +%s)
