--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,13 @@ jobs:
     - name: List files after Maven build
       run: ls -al target/
 
+    - name: Log in to GitHub Container Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag lotto-app:$(date +%s)
+
+    - name: Push Docker image to GHCR
+      run: |
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/lotto-app
+        docker push $IMAGE_NAME:latest
