--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,10 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag lotto-app:$(date +%s)
+      run: |
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/lotto-app
+        docker build -t $IMAGE_NAME:latest .
+      #run: docker build . --file Dockerfile --tag lotto-app:$(date +%s)
 
     - name: Push Docker image to GHCR
       run: |
